@@ -42,6 +42,14 @@ href="gdb.html">short tutorial</a>).
 <!-- News entries start here -->
 
 <tr><td valign="top">
+<b>June 13, 2006</b>
+</td><td>
+The May 2006 issue of Linux Journal contains the article &quot;<a
+href="http://www.linuxjournal.com/article/8757">Embedded Java with
+GCJ</a>&quot; by Gene Sally.
+</td></tr>
+
+<tr><td valign="top">
 <b>June 6, 2006</b>
 </td><td>
 RMS approved the plan to use the Eclipse compiler as the new gcj front
