@@ -1,3 +1,7 @@
+2006-06-13  Tom Tromey  <tromey@redhat.com>
+
+	* index.html: Re-added Linux Journal link.
+
 2006-06-06  Tom Tromey  <tromey@redhat.com>
 
 	* index.html: News about ecj.
